# sage-multi-tenancy

./: .env.example  .gitignore  Dockerfile  README.md  plugin-entrypoint.sh  pyproject.toml  sage.yaml
docker/vllm/: Dockerfile
scripts/: live_demo.py  plot_metrics_timeseries.py
src/sage_mt/: __init__.py  config.py  models.py  publisher.py  resource_layer.py  rtsp.py  scheduler.py
src/sage_mt/gateway/: __init__.py  app.py
src/sage_mt/torch_worker/: app.py
src/sage_mt/web_ui/: __init__.py  app.py
